--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,7 +11,7 @@
 	<div class="login-error-message has-warning" login-error></p>
 	</div>
 
-	<button class="btn btn-default" type="submit">Login</button>
+	<button class="btn btn-primary" type="submit">Login</button>
 
 </form>
 
