--- a/app/templates/dash.html
+++ b/app/templates/dash.html
@@ -1,3 +1,6 @@
 <div ng-controller="DashController">
-	<h1>Ready to plan a trip {{FirstName}}?</h1>
+	<h1>Hi {{FirstName}}!</h1>
+
+	<div></div>
 </div>
+
