Fix for async loading

--- a/app/components/register/Template.Register.html
+++ b/app/components/register/Template.Register.html
@@ -7,7 +7,7 @@
 	<div class="form-group">
 		<label for="password">Password:</label>
 		<input type="password" class="form-control input-lg" id="password" ng-model="credentials.password">
-	<div class="login-error-message has-warning" login-error></p>
+	<div class="login-error-message has-warning" register-error></p>
 	</div>
 
 	<button class="btn btn-primary" type="submit">Register</button>
