--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,16 @@
-
-<h2>Sign in</h2>
-<form name="loginForm clearfix" class="login-form" ng-controller="LoginController" ng-submit="login(credential)" novalidate>
+<form name="loginForm" class="clearfix"  ng-submit="login(credential)" novalidate>
 	<div class="form-group">
 		<label for="username">Email:</label>
-		<input type="text" class="form-control input-lg" id="username" ng-model="credentials.username">
+		<input type="text" class="form-control input-sm" id="username" ng-model="credentials.username">
+		<span class="login-error-message has-warning" login-error></span>
 	</div>
 	<div class="form-group">
 		<label for="password">Password:</label>
-		<input type="password" class="form-control input-lg" id="password" ng-model="credentials.password">
-	<div class="login-error-message has-warning" login-error></p>
-	</div>
-
-	<button class="btn btn-primary" type="submit">Login</button>
+		<input type="password" class="form-control input-sm" id="password" ng-model="credentials.password">
+		
+	</div> 
+	<button class="btn btn-primary btn-sm" type="submit">Login</button>
 
 </form>
-<a href="#/register">Register</a>
 
 
