--- a/app/components/event/event.html
+++ b/app/components/event/event.html
@@ -1,14 +1,7 @@
-<div>
-	<h2>{{event.Title}}</h2>
-	<div class="panel panel-default">
-		<div class="panel-heading">Details</div>
-		<div class="panel-body">
-			<ul>
-				<li>Created at: <event-detail type="event.CreatedAt"></event-detail></li>
-			</ul>
-		</div>
-	</div>
-	<div class="panel panel-danger ng-hide" ng-hide="noEvent">
+<div class="col-md-8">
+	<h2>{{details.Title}}</h2>
+	<event-detail detail="date"></event-detail>
+	<div class="panel panel-danger ng-show" ng-show="noEvent">
 		<div class="panel-heading">{{error.status}}</div>
 		<div class="panel-body">
 			{{error.message}}
