FE for updating event

--- a/app/components/event/event.html
+++ b/app/components/event/event.html
@@ -1,6 +1,6 @@
 <div class="col-md-8">
 	<h2>{{details.Title}}</h2>
-	<event-detail detail="date"></event-detail>
+	<event-detail detail="Date"></event-detail>
 	<div class="panel panel-danger ng-show" ng-show="noEvent">
 		<div class="panel-heading">{{error.status}}</div>
 		<div class="panel-body">
